# LearnHaskell

./: .gitignore  Chapter8.hs  LICENSE  TypeInference1.hs  yesod_work.txt
CaesarCypher.hsproj/: .uuid  AbstractMachine.hs  CaesarCypher.cabal  CaesarCypher.hs  Countdown.hs  DerivedPrimitives.hs  Functors.hs  GameOfLife.hs  Hangman.hs  Nim.hs  RecursiveTypes.hs  Relabel.hs  StateMonad.hs  TautologyChecker.hs  TicTacToe.hs  Transmitter.hs
Chapter5.hsproj/: .uuid  Arith3Broken.hs  Chapter5.cabal  Sing.hs
Chapter7.hsproj/: .uuid  Arith2.hs  Chapter7.cabal  Chapter7.hs  Exercises.hs
HaskellProgramming.hsproj/: .uuid  EqExercises.hs  HaskellProgramming.cabal
HaskellProgramming.hsproj/Chapter05/: Arith3Broken.hs  EqExercises.hs  Sing.hs  TypeInference1.hs
HaskellProgramming.hsproj/Chapter07/: Arith2.hs  Chapter7.hs  Exercises.hs
HaskellProgramming.hsproj/Chapter08/: ApplyTimes.hs  FFS.hs
HaskellProgramming.hsproj/Chapter09/: And.hs  Capitalize.hs  Cipher.hs  FilterChar.hs  Filtering.hs  Zipping.hs
HelloWorld2/: HelloWorld2.cabal
HelloWorld2/app/: devel.hs
HelloWorld2/config/: keter.yml
HelloWorld2/templates/: homepage.hamlet
Typeclassopedia.hsproj/: .uuid  Applicative.hs  Functor.hs  Typeclassopedia.cabal
Untitled.hsproj/: Untitled.cabal  Untitled.hs
Web/: HelloWorld.hs  install.txt
Web/HelloWorld/: HelloWorld.cabal  client_session_key.aes
Web/fullBuild/: fullBuild.cabal
Web/fullBuild/app/: devel.hs
Web/fullBuild/config/: keter.yml  settings.yml  test-settings.yml
Web/fullBuild/templates/: homepage.hamlet
Web/sqlitetest/: HelloWorld2.hs  HelloWorld3.hs  HelloWorld4.hs  PutJSON.hs  Shakespearean1.hs  Shakespearean2.hs  Shakespearean3.hs  SimpleJSON.hs  sqlitetest.cabal
Web/sqlitetest/Rosalind/: CountDna.hs  Main.hs
Web/sqlitetest/Rosalind/10CalculatingProteinMass/: 10CalculatingProteinMass.cabal  README.md
Web/sqlitetest/Rosalind/11EnumeratingGeneOrders/: 11EnumeratingGeneOrders.cabal  README.md
Web/sqlitetest/Rosalind/12OpenReadingFrames/: 12OpenReadingFrames.cabal  README.md
Web/sqlitetest/Rosalind/13InferringmRNAfromProtein/: 13InferringmRNAfromProtein.cabal  README.md
Web/sqlitetest/Rosalind/14FindingAProteinMotif/: 14FindingAProteinMotif.cabal  README.md
Web/sqlitetest/Rosalind/15FindingASharedMotif/: 15FindingASharedMotif.cabal  README.md
Web/sqlitetest/Rosalind/16RNASplicing/: 16RNASplicing.cabal  README.md
Web/sqlitetest/Rosalind/1_CountDNA/: Main.hs
Web/sqlitetest/Rosalind/2_DNAtoRNA/: DnaToRna.hs  Main.hs
Web/sqlitetest/Rosalind/3_ComplimentingDNA/: Main.hs  ReverseCompliment.hs
Web/sqlitetest/Rosalind/5_FindingAProteinMotif/: B5ZC00.fasta.txt  README.md  notes.txt
Web/sqlitetest/Rosalind/simpleTest/: README.md  rnaToProtein.cabal  simpleTest.cabal  stack.yaml
Web/sqlitetest/Rosalind/simpleTest/src/: Main.hs  RNAtoProtein.hs
Web/sqlitetest/app/: devel.hs
Web/sqlitetest/config/: keter.yml  settings.yml  test-settings.yml
Web/sqlitetest/docs/: Main.html  doc-index.html
Web/sqlitetest/templates/: homepage.hamlet
chapter8.hsproj/: chapter8.cabal
playground.hsproj/: .uuid  Bookwork.hs  TypeInterence1.hs  bookwork.cabal
rwh/monads14/: README.md  monads14.cabal
(+14 files in other folders)
