name: HaskellProgramming
version: 1.0
cabal-version: 1.11
build-type: Simple
license: AllRightsReserved
stability: experimental
x-ghc-framework-version: 7.10.3-5.9-2
x-last-ide-version: HfM1.2.1
Executable HaskellProgramming
  main-is: Chapter03.hs
  buildable: True
  build-depends:
      base -any
  other-modules:
      Chapter08
      Chapter07.Chapter7
      Chapter07.Exercises
      Chapter07.Arith2
      Chapter07
      Chapter09.FilterChar
      Chapter10
      Chapter05.EqExercises
      Chapter05.Arith3Broken
      Chapter05.Sing
      Chapter05.TypeInference1
      Chapter06
      Chapter11
      Chapter09
