name: HaskellProgramming
version: 1.0
cabal-version: 1.11
build-type: Simple
license: AllRightsReserved
stability: experimental
x-ghc-framework-version: 7.10.3-5.9-2
x-last-ide-version: HfM1.2.1
Executable HaskellProgramming
  main-is: Main.hs
  buildable: True
  build-depends:
      base -any
  other-modules:
      Chapter08.FFS
      Chapter08.ApplyTimes
      Chapter07.Chapter7
      Chapter07.Exercises
      Chapter07.Arith2
      Chapter09.Filtering
      Chapter09.FilterChar
      Chapter09.Zipping
      Chapter05.EqExercises
      Chapter05.Arith3Broken
      Chapter05.Sing
      Chapter05.TypeInference1
