name:                rnaToProtein
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/simpleTest#readme
license:             BSD3
license-file:        LICENSE
author:              Brody Berg
maintainer:          brodyberg@gmail.com
copyright:           2017 Brody Berg
category:            Project Rosalind
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable simpleTest
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       containers >= 0.5.7,
                       split >= 0.2.3